<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.egov</groupId>
    <artifactId>muster-roll</artifactId>
    <packaging>jar</packaging>
    <name>muster-roll</name>
    <version>0.2.0</version>
    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <postgresql.version>42.4.1</postgresql.version>
        <log4j2.version>2.17.1</log4j2.version>
        <lombok.version>1.18.22</lombok.version>
    </properties>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
    </parent>
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>9.22.3</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-core</artifactId>
            <version>1.5.18</version>
        </dependency>
        <!-- Egov dependencies -->
<!--        <dependency>-->
<!--            <groupId>org.egov.services</groupId>-->
<!--            <artifactId>services-common</artifactId>-->
<!--            <version>1.0.1-SNAPSHOT</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.egov.services</groupId>
            <artifactId>tracer</artifactId>
            <version>2.9.0-SNAPSHOT</version>
        </dependency>
       <dependency>
            <groupId>org.egov.services</groupId>
            <artifactId>digit-models</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.egov</groupId>
            <artifactId>mdms-client</artifactId>
            <version>2.9.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
        <!-- Bean Validation API support -->
<!--        <dependency>-->
<!--            <groupId>javax.validation</groupId>-->
<!--            <artifactId>validation-api</artifactId>-->
<!--        </dependency>-->
    </dependencies>
    <repositories>
    <repository>
        <id>repo.egovernments.org</id>
        <name>eGov ERP Releases Repository</name>
        <url>https://nexus-repo.egovernments.org/nexus/content/repositories/releases/</url>
    </repository>
    <repository>
        <id>repo.egovernments.org.snapshots</id>
        <name>eGov ERP Releases Repository</name>
        <url>https://nexus-repo.egovernments.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
        <id>repo.egovernments.org.public</id>
        <name>eGov Public Repository Group</name>
        <url>https://nexus-repo.egovernments.org/nexus/content/groups/public/</url>
    </repository>
    <repository>
        <id>repo.digit.org</id>
        <name>eGov DIGIT Releases Repository</name>
        <url>https://nexus-repo.digit.org/nexus/content/repositories/snapshots/</url>
    </repository>
</repositories>
</project>
